--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --font-family: 'Poppins', sans-serif;
     --text: 400 1rem/1.5 var(var(--font-family));
     --text-sm: 400 .875rem/1.4 var(var(--font-family));
@@ -17,11 +17,24 @@
     --surface-primary: #FFFFFF;
     --surface-secondary: #FEE7D6;
 
-    --stroke-default:#D6D3D1;
-    --stroke-hightlight: #F3541C;
+    --stroke-default: #D6D3D1;
+    --stroke-highlight: #F3541C;
     --semantic-error: #DC2626;
 }
 
-body{
+body {
     overflow: hidden;
+
+    font: var(--text);
+    color: var(--text-secondary);
+}
+
+h1,
+h2 {
+    color: var(--text-primary);
+}
+
+img {
+     max-width: 100%;
+     height: auto;
 }
